ctowasm/test/samples/error/redefined_tags_prob.c

int main() {
  enum X;
  struct X { int x; };
}